static/css/style.scss
/* ... */
    .block-7 .btn-primary:hover, .block-7 .btn-primary:focus {
      background: #6b76ff !important;
      color: #fff; }
  .block-7:hover, .block-7:focus {
    -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
    -moz-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
    box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11); }

.ftco-about .one-half {
  width: 100%;
  padding: 30px 15px; }
  @media (min-width: 768px) {
    .ftco-about .one-half {
      padding: 5% 13% 5% 5%;
      width: 50%; } }
  .ftco-about .one-half.img {
    display: block; }
    @media (max-width: 767.98px) {
      .ftco-about .one-half.img {
        height: 300px; } }



.ftco-section-parallax {
  position: relative; }
  .ftco-section-parallax .parallax-img {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    position: relative;
    padding: 4em 0;
    background: #6b76ff; }
  .ftco-section-parallax .heading-section-white h2 {
    font-weight: 400 !important; }

.aside-stretch {
  background: #9ea5ff; }
  .aside-stretch:after {
    position: absolute;
    top: 0;
    right: 100%;
    bottom: 0;
    content: '';
    width: 360%;
    background: #9ea5ff; }
  @media (max-width: 767.98px) {
    .aside-stretch {
      background: transparent; }
      .aside-stretch:after {
        background: transparent;
        display: none; } }

.form-control {
  height: 52px !important;
  background: #fff !important;
  color: #000000 !important;
  font-size: 18px;
  border-radius: 5px;
  -webkit-box-shadow: none !important;
  box-shadow: none !important; }
  .form-control:focus, .form-control:active {
    border-color: #000000; }

textarea.form-control {
  height: inherit !important; }

.ftco-vh-100 {
  height: 100vh; }
  @media (max-width: 1199.98px) {
    .ftco-vh-100 {
      height: inherit;
      padding-top: 5em;
      padding-bottom: 5em; } }

.ftco-animate {
  opacity: 0;
  visibility: hidden; }

.bg-primary {
  background: #6b76ff !important; }

.media-custom {
  background: #fff; }
  .media-custom .media-body .name {
    font-weight: 500;
    font-size: 16px;
    margin-bottom: 0;
    color: #6b76ff; }
  .media-custom .media-body .position {
    font-size: 13px;
    color: #d9d9d9; }

.about-author .desc h3 {
  font-size: 24px; }

.ftco-section {
  padding: 7em 0;
  position: relative; }
  @media (max-width: 767.98px) {
    .ftco-section {
      padding: 6em 0; } }

.ftco-bg-dark {
  background: #3c312e; }

.ftco-footer {
  font-size: 16px;
  background: #6b76ff;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  color: white;
  text-align: center;
}
  

.ftco-footer-social li {
  list-style: none;
  margin: 0 10px 0 0;
  display: inline-block; }
  .ftco-footer-social li a {
    height: 50px;
    width: 50px;
    display: block;
    float: center;
    background: #000000;
    border-radius: 50%;
    position: relative; }
    .ftco-footer-social li a span {
      position: absolute;
      font-size: 26px;
      top: 50%;
      left: 50%;
      -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%); }
    .ftco-footer-social li a:hover {
      color: #fff; }

.footer-small-nav > li {
  display: inline-block; }
  .footer-small-nav > li a {
    margin: 0 10px 10px 0; }
    .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
      color: #6b76ff; }

.media .ftco-icon {
  width: 100px; }
  .media .ftco-icon span {
    color: #6b76ff; }

.ftco-media {
  background: #fff;
  border-radius: 0px; }
  .ftco-media .heading {
    font-weight: normal; }
  .ftco-media.ftco-media-shadow {
    padding: 40px;
    background: #fff;
    -webkit-box-shadow: 0 10px 50px -15px rgba(0, 0, 0, 0.3);
    box-shadow: 0 10px 50px -15px rgba(0, 0, 0, 0.3);
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
    position: relative;
    top: 0; }
    .ftco-media.ftco-media-shadow:hover, .ftco-media.ftco-media-shadow:focus {
      top: -3px;
      -webkit-box-shadow: 0 10px 70px -15px rgba(0, 0, 0, 0.3);
      box-shadow: 0 10px 70px -15px rgba(0, 0, 0, 0.3); }
  .ftco-media .icon {
    font-size: 50px;
    display: block;
    color: #6b76ff; }
  .ftco-media.text-center .ftco-icon {
    margin: 0 auto; }

.ftco-overflow-hidden {
  overflow: hidden; }

.padding-top-bottom {
  padding-top: 120px;
  padding-bottom: 120px; }

#map {
  width: 100%; }
  @media (max-width: 991.98px) {
    #map {
      height: 300px; } }

@-webkit-keyframes pulse {
  0% {
    -webkit-box-shadow: 0 0 0 0 rgba(107, 118, 255, 0.4); }
  70% {
    -webkit-box-shadow: 0 0 0 30px rgba(107, 118, 255, 0); }
  100% {
    -webkit-box-shadow: 0 0 0 0 rgba(107, 118, 255, 0); } }

@keyframes pulse {
  0% {
    -moz-box-shadow: 0 0 0 0 rgba(107, 118, 255, 0.4);
    -webkit-box-shadow: 0 0 0 0 rgba(107, 118, 255, 0.4);
    box-shadow: 0 0 0 0 rgba(107, 118, 255, 0.4); }
  70% {
    -moz-box-shadow: 0 0 0 30px rgba(107, 118, 255, 0);
    -webkit-box-shadow: 0 0 0 30px rgba(107, 118, 255, 0);
    box-shadow: 0 0 0 30px rgba(107, 118, 255, 0); }
  100% {
    -moz-box-shadow: 0 0 0 0 rgba(107, 118, 255, 0);
    -webkit-box-shadow: 0 0 0 0 rgba(107, 118, 255, 0);
    box-shadow: 0 0 0 0 rgba(107, 118, 255, 0); } }

.heading-section .subheading {
  font-size: 18px;
  display: block;
  margin-bottom: 5px; }

.heading-section h2 {
  font-size: 40px;
  font-weight: 700; }
  .heading-section h2 span {
    font-weight: 400; }
  @media (max-width: 767.98px) {
    .heading-section h2 {
      font-size: 28px; } }

.heading-section.heading-section-white .subheading {
  color: rgba(255, 255, 255, 0.9); }

.heading-section.heading-section-white h2 {
  font-size: 40px;
  color: #fff; }

.heading-section.heading-section-white p {
  color: rgba(255, 255, 255, 0.9); }

.img,
.blog-img,
.user-img {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center; }
/* ... */

